force-app/main/default/objects/Alert_for_ClosedWon_Opportunity__e/Alert_for_ClosedWon_Opportunity__e.object-meta.xml
<CustomObject>
    <description>Publish a platform event on closed won opps. The website listens to it and will generate a &quot;Gong&quot; on the website.</description>
    <label>Alert for ClosedWon Opportunity</label>
    <pluralLabel>Alerts for ClosedWon Opportunity</pluralLabel>
</CustomObject>