force-app/main/default/objects/Alert_for_ClosedWon_Opportunity__e/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <label>AccountName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>