force-app/main/default/objects/Alert_for_ClosedWon_Opportunity__e/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <description>from opp: cycle__c</description>
    <label>Cycle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>