force-app/main/default/objects/Alert_for_ClosedWon_Opportunity__e/fields/CyclePrice__c.field-meta.xml
<CustomField>
    <fullName>CyclePrice__c</fullName>
    <description>from opp: Cycle_Price__c</description>
    <label>CyclePrice</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>