force-app/main/default/objects/Alert_for_ClosedWon_Opportunity__e/fields/OpportunityARR__c.field-meta.xml
<CustomField>
    <fullName>OpportunityARR__c</fullName>
    <description>from opp: ARR__c</description>
    <label>OpportunityARR</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>