force-app/main/default/objects/Alert_for_ClosedWon_Opportunity__e/fields/OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>OpportunityType__c</fullName>
    <description>from Opp: type</description>
    <label>OpportunityType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>