force-app/main/default/objects/Alert_for_ClosedWon_Opportunity__e/fields/OwnerDivision__c.field-meta.xml
<CustomField>
    <fullName>OwnerDivision__c</fullName>
    <label>OwnerDivision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>