force-app/main/default/objects/Alert_for_ClosedWon_Opportunity__e/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <description>Owner name</description>
    <label>OwnerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>