force-app/main/default/objects/Alert_for_ClosedWon_Opportunity__e/fields/OwnerPicture__c.field-meta.xml
<CustomField>
    <fullName>OwnerPicture__c</fullName>
    <description>Base 64 of the image</description>
    <label>OwnerPicture</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>