force-app/main/default/objects/Alert_for_ClosedWon_Opportunity__e/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>from opp: Product_sold__c</description>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>